replace registration with NPL registration form

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             <img src="qdt-masterclass-v2.png" alt="Quantum Digital Twin Masterclass">
             <h2>Quantum Simulators and Quantum Digital Twins: The Masterclass</h2>
             <p>Join us at the National Physical Laboratory on <b></b>March 4-7, 2025</b>, at the Bushy House.</p>
-            <a href="#registration">Register Now</a>
+            <a href="https://www.eventbrite.co.uk/e/quantum-digital-twins-masterclass-tickets-1228075570089">Register Now</a>
         </div>
     </section>
 
@@ -430,14 +430,7 @@
                 <h3>Register Now</h3>
                 <p>Secure your spot at the Quantum Digital Twin Masterclass.</p>
             </div>
-            <form action="#" method="post">
-                <input type="text" name="fullname" placeholder="Full Name" required>
-                <input type="email" name="email" placeholder="Email Address" required>
-                <input type="text" name="organization" placeholder="Organization">
-                <textarea name="message" rows="4" placeholder="Any special requirements"></textarea>
-                <textarea name="message" rows="6" placeholder="Please describe your background and motivation for joining the masterclass."></textarea>
-                <button type="submit">Submit Registration</button>
-            </form>
+            <a href="https://www.eventbrite.co.uk/e/quantum-digital-twins-masterclass-tickets-1228075570089">Register Now</a>
         </div>
     </section>
 
