--- a/index.html
+++ b/index.html
@@ -94,8 +94,16 @@
             font-size: 16px;
             color: #666;
         }
-        .about, .speakers, .schedule, .registration, .contact {
+        .about, .speakers, .schedule, .registration {
             /* Additional styling as needed */
+        }
+        .contact a {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #004080;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 5px;
         }
         .lecturers .lecturer, .schedule .event {
             display: flex;
