fix update to registration box

--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
             font-size: 16px;
             color: #666;
         }
-        .about, .speakers, .schedule, .registration {
+        .about, .speakers, .schedule, .contact {
             /* Additional styling as needed */
         }
-        .contact a {
+        .registration a {
             display: inline-block;
             padding: 10px 20px;
             background-color: #004080;
