--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
         .section-title p {
             font-size: 16px;
             color: #666;
+            margin-bottom: 1cm;
         }
         .about, .speakers, .schedule, .contact {
             /* Additional styling as needed */
