--- a/index.html
+++ b/index.html
@@ -95,6 +95,11 @@
             color: #666;
             margin-bottom: 10px;
         }
+        .footer p {
+            font-size: 10px;
+            color: #666;
+            margin-bottom: 10px;
+        }
         .about, .speakers, .schedule, .contact {
             /* Additional styling as needed */
         }
@@ -437,8 +442,10 @@
         <div class="container">
             <div class="section-title">
                 <h3>Register Now</h3>
-                <p>Secure your spot at the Quantum Digital Twin Masterclass.</p>
+                <p>Secure your spot at the Quantum Digital Twin Masterclass!</p>
+                <p class="footer">You may attend in person or register to participate remotely.</p>
                 <a href="https://www.eventbrite.co.uk/e/quantum-digital-twins-masterclass-tickets-1228075570089">Register Now</a>
+                <p class="footer">Due to limited on-site capacity, there will be a selection process for in-person participation. We will notify you of your status within a week. If not selected for on-site attendance, you will have the opportunity to participate remotely.</p>
             </div>
         </div>
     </section>
