--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
         .footer p {
             font-size: 10px;
             color: #666;
+            margin-top: 10px;
             margin-bottom: 10px;
         }
         .about, .speakers, .schedule, .contact {
