--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
             color: #666;
             margin-top: 10px;
             margin-bottom: 10px;
+            text-align: center;
         }
         .about, .speakers, .schedule, .contact {
             /* Additional styling as needed */
@@ -445,7 +446,7 @@
                 <h3 class="section-title">Register Now</h3>
                 <p class="section-title">Secure your spot at the Quantum Digital Twin Masterclass!</p>
                 <p class="footer">You may attend in person or register to participate remotely.</p>
-                <a href="https://www.eventbrite.co.uk/e/quantum-digital-twins-masterclass-tickets-1228075570089">Register Now</a>
+                <a class="section-title" href="https://www.eventbrite.co.uk/e/quantum-digital-twins-masterclass-tickets-1228075570089">Register Now</a>
                 <p class="footer">Due to limited on-site capacity, there will be a selection process for in-person participation. We will notify you of your status within a week. If not selected for on-site attendance, you will have the opportunity to participate remotely.</p>
             </div>
         </div>
