update styling in registration

--- a/index.html
+++ b/index.html
@@ -442,11 +442,11 @@
     <!-- Registration Section -->
     <section id="registration" class="registration" style="background-color: #f9f9f9;">
         <div class="container">
-            <div>
-                <h3 class="section-title">Register Now</h3>
-                <p class="section-title">Secure your spot at the Quantum Digital Twin Masterclass!</p>
+            <div class="section-title">
+                <h3>Register Now</h3>
+                <p>Secure your spot at the Quantum Digital Twin Masterclass!</p>
                 <p class="footer">You may attend in person or register to participate remotely.</p>
-                <a class="section-title" href="https://www.eventbrite.co.uk/e/quantum-digital-twins-masterclass-tickets-1228075570089">Register Now</a>
+                <a href="https://www.eventbrite.co.uk/e/quantum-digital-twins-masterclass-tickets-1228075570089">Register Now</a>
                 <p class="footer">Due to limited on-site capacity, there will be a selection process for in-person participation. We will notify you of your status within a week. If not selected for on-site attendance, you will have the opportunity to participate remotely.</p>
             </div>
         </div>
