--- a/index.html
+++ b/index.html
@@ -446,9 +446,9 @@
             <div class="section-title">
                 <h3>Register Now</h3>
                 <p>Secure your spot at the Quantum Digital Twin Masterclass!</p>
-                <p class="small-text">You may attend in person or register to participate remotely.</p>
+                <p style="font-size:10px">You may attend in person or register to participate remotely.</p>
                 <a href="https://www.eventbrite.co.uk/e/quantum-digital-twins-masterclass-tickets-1228075570089">Register Now</a>
-                <p class="small-text">Due to limited on-site capacity, there will be a selection process for in-person participation. We will notify you of your status within a week. If not selected for on-site attendance, you will have the opportunity to participate remotely.</p>
+                <p style="font-size:10px">Due to limited on-site capacity, there will be a selection process for in-person participation. We will notify you of your status within a week. If not selected for on-site attendance, you will have the opportunity to participate remotely.</p>
             </div>
         </div>
     </section>
