--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
         <div class="container">
             <div class="section-title">
                 <h3>Register Now</h3>
-                <p style="font-size:20px">Secure your spot at the Quantum Digital Twins masterclass!</p>
+                <p style="font-size:26px"><strong>Secure your spot at the Quantum Digital Twins masterclass!</strong></p>
                 <p>You may attend in person or register to participate remotely.</p>
                 <p>We expect all in-person attendees of the QDT masterclass lectures (4th and 5th) to bring a poster to showcase some of their current research interests</p>
                 <a href="https://www.eventbrite.co.uk/e/quantum-digital-twins-masterclass-tickets-1228075570089">Register</a>
@@ -462,8 +462,8 @@
                 <p>If you have any questions, feel free to reach out.</p>
             </div>
             <div class="section-title">
-            <p>Contact for organisational purposes: <a href="mailto:daniel.rodrigo-albert@npl.co.uk">daniel.rodrigo-albert@npl.co.uk</a></p>
-            <p>Event address: National Physical Laboratory, Hampton Road, Teddington, Middlesex TW11 0LW, UK</p>
+            <p>Contact (for organisational purposes): <a href="mailto:daniel.rodrigo-albert@npl.co.uk">daniel.rodrigo-albert@npl.co.uk</a></p>
+            <p>Venue address: National Physical Laboratory, Hampton Road, Teddington, Middlesex TW11 0LW, UK</p>
             <p>Directions to the venue: <a href="https://www.npl.co.uk/find-us">https://www.npl.co.uk/find-us</a></p>
             <!-- You can also embed a Google Map here if desired -->
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2488.0545349695!2d-0.3439818117474202!3d51.4204248443359!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48760b003575f69f%3A0x4c42601b19b67614!2sBushy%20House!5e0!3m2!1sen!2suk!4v1737114114318!5m2!1sen!2suk" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
