style registration sec

--- a/index.html
+++ b/index.html
@@ -445,9 +445,9 @@
         <div class="container">
             <div class="section-title">
                 <h3>Register Now</h3>
-                <p style="font-size:26px"><strong>Secure your spot at the Quantum Digital Twins masterclass!</strong></p>
-                <p>You may attend in person or register to participate remotely.</p>
-                <p>We expect all in-person attendees of the QDT masterclass lectures (4th and 5th) to bring a poster to showcase some of their current research interests</p>
+                <p style="font-size:20px"><strong>Secure your spot at the Quantum Digital Twins masterclass!</strong></p>
+                <p style="text-align: left">You may attend in person or register to participate remotely.</p>
+                <p style="text-align: left">We expect all in-person attendees of the QDT masterclass lectures (4th and 5th) to bring a poster to showcase some of their current research interests.</p>
                 <a href="https://www.eventbrite.co.uk/e/quantum-digital-twins-masterclass-tickets-1228075570089">Register</a>
                 <p style="font-size:12px">Due to limited on-site capacity, there will be a selection process for in-person participation. We will notify you of your status within a week. If not selected for on-site attendance, you will have the opportunity to participate remotely.</p>
             </div>
