--- a/index.html
+++ b/index.html
@@ -444,11 +444,11 @@
     <section id="registration" class="registration" style="background-color: #f9f9f9;">
         <div class="container">
             <div class="section-title">
-                <h3>Register Now</h3>
-                <p style="font-size:20px"><strong>Secure your spot at the Quantum Digital Twins masterclass!</strong></p>
-                <p style="text-align: left">You may attend in person or register to participate remotely.</p>
-                <p style="text-align: left">We expect all in-person attendees of the QDT masterclass lectures (4th and 5th) to bring a poster to showcase some of their current research interests.</p>
+                <h3>Register Now — Secure your spot at the Quantum Digital Twins masterclass!</h3>
+                <p style="font-size:20px"><strong></strong></p>
                 <a href="https://www.eventbrite.co.uk/e/quantum-digital-twins-masterclass-tickets-1228075570089">Register</a>
+                <p style="text-align: left">You may attend in person or register to participate remotely.</p>
+                <p style="text-align: left">We expect all in-person attendees of the masterclass lectures (4th and 5th March) to bring a <strong>poster</strong> to showcase some of their current research interests.</p>
                 <p style="font-size:12px">Due to limited on-site capacity, there will be a selection process for in-person participation. We will notify you of your status within a week. If not selected for on-site attendance, you will have the opportunity to participate remotely.</p>
             </div>
         </div>
