style registration sec

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             color: #fff;
             text-decoration: none;
             border-radius: 5px;
-            margin-bottom: 10px;
+            margin-bottom: 20px;
         }
         .lecturers .lecturer, .schedule .event {
             display: flex;
@@ -448,7 +448,9 @@
                 <p style="text-align: justify">We expect all in-person attendees of the masterclass lectures (4th and 5th March) to bring a <strong>poster</strong> to showcase some of their current research interests.</p>
                 <p style="text-align: justify">You may attend in-person or register to participate remotely.</p>
                 <a href="https://www.eventbrite.co.uk/e/quantum-digital-twins-masterclass-tickets-1228075570089">Register</a>
-                <p style="font-size:12px; text-align: center">Due to limited on-site capacity, there will be a selection process for in-person participation. We will notify you of your status within a week. If not selected for on-site attendance, you will have the opportunity to participate remotely.</p>
+                <div style="width: 65%;">
+                    <p style="font-size:12px; text-align: center">Due to limited on-site capacity, there will be a selection process for in-person participation. We will notify you of your status within a week. If not selected for on-site attendance, you will have the opportunity to participate remotely.</p>
+                </div>
             </div>
         </div>
     </section>
