update lecturers info

--- a/index.html
+++ b/index.html
@@ -286,15 +286,8 @@
             <div class="lecturer">
                 <img src="speaker-icon.png" alt="Lecturer">
                 <div>
-                    <h4>[TBD] Prof. Mari Carmen Banuls (TU Munich, Germany)</h4>
-                    <p>To be confirmed.</p>
-                </div>
-            </div>
-            <div class="lecturer">
-                <img src="speaker-icon.png" alt="Lecturer">
-                <div>
-                    <h4>[TBC] Prof. Simone Montangero (University of Padova, Italy)</h4>
-                    <p>To be confirmed.</p>
+                    <h4>Prof. Mari Carmen Banuls (TU Munich, Germany)</h4>
+                    <p>Quantum simulation with tensor networks.</p>
                 </div>
             </div>
         </div>
