style sub-titles

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         <div class="container">
             <div class="section-title">
                 <h3>About the Masterclass</h3>
-                <p>Discover the latest advancements in Quantum Digital Twin technology and its applications across various industries.</p>
+                <p><i>Discover the latest advancements in Quantum Digital Twin technology and its applications across various industries.</i></p>
             </div>
             <p>&nbsp;</p>
             <p>
@@ -253,7 +253,7 @@
         <div class="container">
             <div class="section-title">
                 <h3>Our Lecturers</h3>
-                <p>Learn from leading experts in quantum simulation and tensor network methods.</p>
+                <p><i>Learn from leading experts in quantum simulation and tensor network methods.</i></p>
                 <p>Lectures will take place on the 4th and 5th of March.</p>
                 <p>There will be a poster session on the evening of Wednesday 5th March, where you will be able to share your research with the masterclass participants and speakers.</p>
             </div>
@@ -300,7 +300,7 @@
         <div class="container">
             <div class="section-title">
                 <h3>Invited Speakers:</h3>
-                <p>Listen to the latest advances in the field.</p>
+                <p><i>Listen to the latest advances in the field.</i></p>
             </div>
             <div class="speaker">
                 <div>
@@ -390,7 +390,7 @@
         <div class="container">
             <div class="section-title">
                 <h3>Event Schedule</h3>
-                <p>Plan your participation with our detailed schedule.</p>
+                <p><i>Plan your participation with our detailed schedule.</i></p>
             </div>
             <div class="event">
                 <img src="day-icon-1.png" alt="Day 1">
