style lectures info

--- a/index.html
+++ b/index.html
@@ -254,8 +254,8 @@
             <div class="section-title">
                 <h3>Our Lecturers</h3>
                 <p><i>Learn from leading experts in quantum simulation and tensor network methods.</i></p>
-                <p>Lectures will take place on the 4th and 5th of March.</p>
-                <p>There will be a poster session on the evening of Wednesday 5th March, where you will be able to share your research with the masterclass participants and speakers.</p>
+                <p style="text-align: left;">Lectures will take place on the 4th and 5th of March.</p>
+                <p style="text-align: left;">There will be a poster session on the evening of Wednesday 5th March, where you will be able to share your research with the masterclass participants and speakers.</p>
             </div>
             <div class="lecturer">
                 <img src="speaker-icon.png" alt="Lecturer">
