update info event

--- a/index.html
+++ b/index.html
@@ -238,9 +238,9 @@
                 and faciliating the exchange of ideas for developing new generations of quantum digital twins.
             </p>
             <p>&nbsp;</p>
-            <h4>Dates and time: 09:00 - 17:00, Tuesday 04 March - Friday 07 March 2025</h4>
-            <h4>Venue: The Bushy House, NPL, Tenddington (London area)</h4>
-            <h4>Dinner: to be confirmed.</h4>
+            <h4>Dates and time: 09:00 - 17:00, Tuesday 4th March - Friday 7th March 2025</h4>
+            <h4>Venue: The Bushy House, NPL, Teddington (London area)</h4>
+            <h4>Dinner: Thursday 6th March (location TBC).</h4>
             <p>&nbsp;</p>
             <p>
                 The tentative programme for the event is to be finalised. Below we list of lecturers for the masterclass and invited speakers.
