update info event

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         <div class="container">
             <div class="section-title">
                 <h3>About the Masterclass</h3>
-                <p><i>Discover the latest advancements in Quantum Digital Twin technology and its applications across various industries.</i></p>
+                <p><i>Discover the latest advancements in Quantum Digital Twins technology and its applications across various industries.</i></p>
             </div>
             <p>&nbsp;</p>
             <p>
