update info speakers

--- a/index.html
+++ b/index.html
@@ -304,17 +304,17 @@
             </div>
             <div class="speaker">
                 <div>
-                    <h4>&#8226; Prof. Frank Verstraete(Univ. Cambridge, UK)</h4>
+                    <h4>&#8226; Prof. Frank Verstraete (University of Cambridge, UK)</h4>
                 </div>
             </div>
             <div class="speaker">
                 <div>
-                    <h4>&#8226; Prof. Sougato Bose (UCL, UK)</h4>
+                    <h4>&#8226; Prof. Sougato Bose (University College London, UK)</h4>
                 </div>
             </div>
             <div class="speaker">
                 <div>
-                    <h4>&#8226; Dr. Fedor Simkovic (IQM, Germany)</h4>
+                    <h4>&#8226; Dr. Fedor &#352;imkovic (IQM, Germany)</h4>
                 </div>
             </div>
             <div class="speaker">
