--- a/index.html
+++ b/index.html
@@ -324,12 +324,7 @@
             </div>
             <div class="speaker">
                 <div>
-                    <h4>&#8226; Prof. Viv Kendon (Univ. Strathclyde, UK)</h4>
-                </div>
-            </div>
-            <div class="speaker">
-                <div>
-                    <h4>&#8226; Dr. Constantin Dalyac (Pasqal, France)</h4>
+                    <h4>&#8226; Prof. Viv Kendon (University of Strathclyde, UK)</h4>
                 </div>
             </div>
             <div class="speaker">
@@ -340,6 +335,16 @@
             <div class="speaker">
                 <div>
                     <h4>&#8226; Prof. George Booth (King's College London, UK)</h4>
+                </div>
+            </div>
+            <div class="speaker">
+                <div>
+                    <h4>&#8226; Dr. Fran&#231;ois Jamet (Alice and Bob, France)</h4>
+                </div>
+            </div>
+            <div class="speaker">
+                <div>
+                    <h4>&#8226; Dr. Constantin Dalyac (Pasqal, France; to be confirmed)</h4>
                 </div>
             </div>
             <div class="speaker">
@@ -375,11 +380,6 @@
             <div class="speaker">
                 <div>
                     <h4>&#8226; Dr. Lucile Savary (Ecole Normale, Lyon, France; to be confirmed)</h4>
-                </div>
-            </div>
-            <div class="speaker">
-                <div>
-                    <h4>&#8226; Dr. Francois Jamet (Alice and Bob, France)</h4>
                 </div>
             </div>
         </div>
@@ -440,7 +440,7 @@
         <div class="container">
             <div class="section-title">
                 <h3>Register Now — Secure your spot at the Quantum Digital Twins masterclass!</h3>
-                <p style="text-align: justify">You may attend in-person or register to participate remotely.We expect all in-person attendees of the masterclass lectures (4th and 5th March) to bring a <strong>poster</strong> to showcase some of their current research interests.</p>
+                <p style="text-align: justify">You may attend in-person or register to participate remotely. We expect all in-person attendees of the masterclass lectures (4th and 5th March) to bring a <strong>poster</strong> to showcase some of their current research interests.</p>
                 <a href="https://www.eventbrite.co.uk/e/quantum-digital-twins-masterclass-tickets-1228075570089">Register</a>
                 <div style="width: 65%; margin:0 auto">
                     <p style="font-size:12px; text-align: center">Due to limited on-site capacity, there will be a selection process for in-person participation. We will notify you of your status within a week. If not selected for on-site attendance, you will have the opportunity to participate remotely.</p>
