--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
             <div class="lecturer">
                 <img src="speaker-icon.png" alt="Lecturer">
                 <div>
-                    <h4>Prof. Mari Carmen Banuls (TU Munich, Germany)</h4>
+                    <h4>Prof. Mari Carmen Ba&#241;uls (TU Munich, Germany)</h4>
                     <p>Quantum simulation with tensor networks.</p>
                 </div>
             </div>
@@ -314,17 +314,7 @@
             </div>
             <div class="speaker">
                 <div>
-                    <h4>&#8226; Dr. Fedor &#352;imkovic (IQM, Germany)</h4>
-                </div>
-            </div>
-            <div class="speaker">
-                <div>
-                    <h4>&#8226; Dr. Nathan Fitzpatrick (Quantinuum, UK)</h4>
-                </div>
-            </div>
-            <div class="speaker">
-                <div>
-                    <h4>&#8226; Prof. Viv Kendon (University of Strathclyde, UK)</h4>
+                    <h4>&#8226; Dr. Alberto Baiardi (IBM Research, Switzerland)</h4>
                 </div>
             </div>
             <div class="speaker">
@@ -334,7 +324,22 @@
             </div>
             <div class="speaker">
                 <div>
+                    <h4>&#8226; Prof. Viv Kendon (University of Strathclyde, UK)</h4>
+                </div>
+            </div>
+            <div class="speaker">
+                <div>
+                    <h4>&#8226; Dr. Nathan Fitzpatrick (Quantinuum, UK)</h4>
+                </div>
+            </div>
+            <div class="speaker">
+                <div>
                     <h4>&#8226; Prof. George Booth (King's College London, UK)</h4>
+                </div>
+            </div>
+            <div class="speaker">
+                <div>
+                    <h4>&#8226; Gian Gentinetta (EPFL, Switzerland)</h4>
                 </div>
             </div>
             <div class="speaker">
@@ -344,42 +349,12 @@
             </div>
             <div class="speaker">
                 <div>
-                    <h4>&#8226; Dr. Constantin Dalyac (Pasqal, France; to be confirmed)</h4>
+                    <h4>&#8226; Prof. Animesh Datta (University of Warwick, UK)</h4>
                 </div>
             </div>
             <div class="speaker">
                 <div>
-                    <h4>&#8226; Prof. Andrew Daley (Univ. Oxford, UK; to be confirmed)</h4>
-                </div>
-            </div>
-            <div class="speaker">
-                <div>
-                    <h4>&#8226; Dr. Ivano Tavernelli (IBM Zurich, Switzerland; to be confirmed)</h4>
-                </div>
-            </div>
-            <div class="speaker">
-                <div>
-                    <h4>&#8226; Dr. Stasja Stanisic (Phasecraft, UK; to be confirmed)</h4>
-                </div>
-            </div>
-            <div class="speaker">
-                <div>
-                    <h4>&#8226; Dr. Ryan Hanley (ColdQuanta, UK; to be confirmed)</h4>
-                </div>
-            </div>
-            <div class="speaker">
-                <div>
-                    <h4>&#8226; Dr. Annabelle Bohrdt (Univ. Regensburg, Germany; to be confirmed)</h4>
-                </div>
-            </div>
-            <div class="speaker">
-                <div>
-                    <h4>&#8226; Dr. Stefano Mensa (Hartree Centre, UK; to be confirmed)</h4>
-                </div>
-            </div>
-            <div class="speaker">
-                <div>
-                    <h4>&#8226; Dr. Lucile Savary (Ecole Normale, Lyon, France; to be confirmed)</h4>
+                    <h4>&#8226; Dr. Gian-Luca Anselmetti (Boehringer Ingelheim, Germany)</h4>
                 </div>
             </div>
         </div>
