--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
     <section id="speakers" class="speakers">
         <div class="container">
             <div class="section-title">
-                <h3>Invited Speakers:</h3>
+                <h3>Invited Speakers</h3>
                 <p><i>Listen to the latest advances in the field.</i></p>
             </div>
             <div class="speaker">
@@ -357,6 +357,7 @@
                     <h4>&#8226; Dr. Gian-Luca Anselmetti (Boehringer Ingelheim, Germany)</h4>
                 </div>
             </div>
+            <p>We will update the website as more speakers confirm their participation.</p>
         </div>
     </section>
     
