style speakers info

--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                     <h4>&#8226; Dr. Gian-Luca Anselmetti (Boehringer Ingelheim, Germany)</h4>
                 </div>
             </div>
-            <p>We will update the website as more speakers confirm their participation.</p>
+            <p style="text-align: center; font-size: 14px;">We will update the website as more speakers confirm their participation.</p>
         </div>
     </section>
     
