--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
             display: flex;
             align-items: center;
             margin-bottom: 20px;
+            margin-left: 33%;
         }
         .speakers .speaker img, .schedule .event img {
             text-align: center;
@@ -428,10 +429,10 @@
     <section id="contact" class="contact">
         <div class="container">
             <div class="section-title">
-                <h3>Contact Us</h3>
+                <h3>Contact us</h3>
                 <p>If you have any questions, feel free to reach out.</p>
             </div>
-            <div class="section-title">
+            <div class="section-title", style="width: 40%; text-align: left;">
             <p>Contact (for organisational purposes): <a href="mailto:daniel.rodrigo-albert@npl.co.uk">daniel.rodrigo-albert@npl.co.uk</a></p>
             <p>Venue address: National Physical Laboratory, Hampton Road, Teddington, Middlesex TW11 0LW, UK</p>
             <p>Directions to the venue: <a href="https://www.npl.co.uk/find-us">https://www.npl.co.uk/find-us</a></p>
