update speakers width

--- a/index.html
+++ b/index.html
@@ -132,7 +132,8 @@
             display: flex;
             align-items: center;
             margin-bottom: 20px;
-            margin-left: 33%;
+            max-width: 200px;
+            margin-left:0 auto;
         }
         .speakers .speaker img, .schedule .event img {
             text-align: center;
