--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
             display: flex;
             align-items: center;
             margin-bottom: 20px;
-            max-width: 200px;
-            margin-left:0 auto;
+            max-width: 800px;
+            margin:0 auto;
         }
         .speakers .speaker img, .schedule .event img {
             text-align: center;
