--- a/index.html
+++ b/index.html
@@ -132,8 +132,7 @@
             display: flex;
             align-items: center;
             margin-bottom: 20px;
-            max-width: 800px;
-            margin:0 auto;
+            margin-left: 33%;
         }
         .speakers .speaker img, .schedule .event img {
             text-align: center;
