update centered block speakers

--- a/index.html
+++ b/index.html
@@ -130,10 +130,10 @@
         .speakers .speaker, .schedule .event {
             text-align: center;
             display: inline-block;
-            /* display*: inline; */
+            display*: inline;
             align-items: center;
             margin-bottom: 20px;
-            margin-left: 33%;
+            /* margin-left: 33%; */
         }
         .speakers .speaker img, .schedule .event img {
             text-align: center;
