update centered speakers

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         .speakers .speaker, .schedule .event {
             text-align: center;
             display: inline-block;
-            display*: inline;
+            /* display*: inline; */
             align-items: center;
             margin-bottom: 20px;
             /* margin-left: 33%; */
