fix linebreak inline in centered speaker block

--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
             </div>
             <div class="speaker">
                 <div>
-                    <h4>&#8226; Prof. Frank Verstraete (University of Cambridge, UK)</h4>
+                    <h4>&#8226; Prof. Frank Verstraete (University of Cambridge, UK)<br/></h4>
                 </div>
             </div>
             <div class="speaker">
