--- a/index.html
+++ b/index.html
@@ -128,10 +128,10 @@
             object-fit: contain; /* Ensures the image fits within the container */
         }
         .speakers .speaker, .schedule .event {
-            text-align: center;
+            text-align: left;
             display: inline-block;
             /* display*: inline; */
-            align-items: center;
+            align-items: left;
             margin-bottom: 20px;
             /* margin-left: 33%; */
         }
