try fix speakers list

--- a/index.html
+++ b/index.html
@@ -304,19 +304,9 @@
                 <p><i>Listen to the latest advances in the field.</i></p>
             </div>
             <div class="speaker">
-                <div>
-                    <h4>&#8226; Prof. Frank Verstraete (University of Cambridge, UK)<br/></h4>
-                </div>
-            </div>
-            <div class="speaker">
-                <div>
-                    <h4>&#8226; Prof. Sougato Bose (University College London, UK)</h4>
-                </div>
-            </div>
-            <div class="speaker">
-                <div>
-                    <h4>&#8226; Dr. Alberto Baiardi (IBM Research, Switzerland)</h4>
-                </div>
+                <ul> Prof. Frank Verstraete (University of Cambridge, UK)</ul>
+                <ul> Prof. Sougato Bose (University College London, UK)</ul>
+                <ul>&#8226; Dr. Alberto Baiardi (IBM Research, Switzerland)</ul>
             </div>
             <div class="speaker">
                 <div>
