update list speakers

--- a/index.html
+++ b/index.html
@@ -304,23 +304,12 @@
                 <p><i>Listen to the latest advances in the field.</i></p>
             </div>
             <div class="speaker">
-                <ul> Prof. Frank Verstraete (University of Cambridge, UK)</ul>
-                <ul> Prof. Sougato Bose (University College London, UK)</ul>
-                <ul>&#8226; Dr. Alberto Baiardi (IBM Research, Switzerland)</ul>
-            </div>
-            <div class="speaker">
-                <div>
-                    <h4>&#8226; Dr. Yaroslav Herasymenko (TU Delft, The Netherlands)</h4>
-                </div>
-            </div>
-            <div class="speaker">
-                <div>
-                    <h4>&#8226; Prof. Viv Kendon (University of Strathclyde, UK)</h4>
-                </div>
-            </div>
-            <div class="speaker">
-                <div>
-                    <h4>&#8226; Dr. Nathan Fitzpatrick (Quantinuum, UK)</h4>
+                <ul> <h4>&#8226; Prof. Frank Verstraete (University of Cambridge, UK)</h4></ul>
+                <ul> <h4>&#8226;Prof. Sougato Bose (University College London, UK)</h4></ul>
+                <ul> <h4>&#8226; Dr. Alberto Baiardi (IBM Research, Switzerland)</h4></ul>
+                <ul> <h4>&#8226; Dr. Yaroslav Herasymenko (TU Delft, The Netherlands)</h4></ul>
+                <ul> <h4>&#8226; Prof. Viv Kendon (University of Strathclyde, UK)</h4></ul>
+                <ul> <h4>&#8226; Dr. Nathan Fitzpatrick (Quantinuum, UK)</h4></ul>
                 </div>
             </div>
             <div class="speaker">
