update speaker list

--- a/index.html
+++ b/index.html
@@ -305,36 +305,16 @@
             </div>
             <div class="speaker">
                 <ul> <h4>&#8226; Prof. Frank Verstraete (University of Cambridge, UK)</h4></ul>
-                <ul> <h4>&#8226;Prof. Sougato Bose (University College London, UK)</h4></ul>
+                <ul> <h4>&#8226; Prof. Sougato Bose (University College London, UK)</h4></ul>
                 <ul> <h4>&#8226; Dr. Alberto Baiardi (IBM Research, Switzerland)</h4></ul>
                 <ul> <h4>&#8226; Dr. Yaroslav Herasymenko (TU Delft, The Netherlands)</h4></ul>
                 <ul> <h4>&#8226; Prof. Viv Kendon (University of Strathclyde, UK)</h4></ul>
                 <ul> <h4>&#8226; Dr. Nathan Fitzpatrick (Quantinuum, UK)</h4></ul>
-                </div>
-            </div>
-            <div class="speaker">
-                <div>
-                    <h4>&#8226; Prof. George Booth (King's College London, UK)</h4>
-                </div>
-            </div>
-            <div class="speaker">
-                <div>
-                    <h4>&#8226; Gian Gentinetta (EPFL, Switzerland)</h4>
-                </div>
-            </div>
-            <div class="speaker">
-                <div>
-                    <h4>&#8226; Dr. Fran&#231;ois Jamet (Alice and Bob, France)</h4>
-                </div>
-            </div>
-            <div class="speaker">
-                <div>
-                    <h4>&#8226; Prof. Animesh Datta (University of Warwick, UK)</h4>
-                </div>
-            </div>
-            <div class="speaker">
-                <div>
-                    <h4>&#8226; Dr. Gian-Luca Anselmetti (Boehringer Ingelheim, Germany)</h4>
+                <ul> <h4>&#8226; Prof. George Booth (King's College London, UK)</h4></ul>
+                <ul> <h4>&#8226; Gian Gentinetta (EPFL, Switzerland)</h4></ul>
+                <ul> <h4>&#8226; Dr. Fran&#231;ois Jamet (Alice and Bob, France)</h4></ul>
+                <ul> <h4>&#8226; Prof. Animesh Datta (University of Warwick, UK)</h4></ul>
+                <ul> <h4>&#8226; Dr. Gian-Luca Anselmetti (Boehringer Ingelheim, Germany)</h4></ul>
                 </div>
             </div>
             <p style="text-align: center; font-size: 14px;">We will update the website as more speakers confirm their participation.</p>
