center speaker list

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         .speakers .speaker, .schedule .event {
             text-align: left;
             display: inline-block;
-            /* display*: inline; */
+            display*: inline;
             align-items: left;
             margin-bottom: 20px;
             /* margin-left: 33%; */
