--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
         .speakers .speaker, .schedule .event {
             text-align: left;
             display: inline-block;
-            display*: inline;
-            align-items: left;
+            /* display*: inline; */
+            align-items: center;
             margin-bottom: 20px;
             /* margin-left: 33%; */
         }
