--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             /* margin-left: 33%; */
         }
         .speakers .speaker img, .schedule .event img {
-            text-align: center;
+            text-align: left;
             width: auto; /* Automatically adjusts width */
             height: 40px; /* Adjusts the height to a small, fixed size */
             max-height: 40px; /* Ensures height doesn't exceed the set size */
