add margin back to speakers and agenda

--- a/index.html
+++ b/index.html
@@ -129,11 +129,11 @@
         }
         .speakers .speaker, .schedule .event {
             text-align: left;
-            display: inline-block;
+            /* display: inline-block; */
             /* display*: inline; */
             align-items: left;
             margin-bottom: 20px;
-            /* margin-left: 33%; */
+            margin-left: 33%;
         }
         .speakers .speaker img, .schedule .event img {
             text-align: left;
