add bottom margin to speakers

--- a/index.html
+++ b/index.html
@@ -144,6 +144,10 @@
             margin-right: 15px; /* Adds spacing between the icon and text */
             object-fit: contain; /* Ensures the image fits within the container */
         }
+        .speakers .speaker ul {
+            margin-bottom: 20px;
+        }
+
         .registration form {
             max-width: 600px;
             margin: auto;
