--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
             <div class="lecturer">
                 <img src="speaker-icon.png" alt="Lecturer">
                 <div>
-                    <h4>[TBD] Prof. Mari Carmen Banuls (TU Munich, Germany)</h4>
+                    <h4>Prof. Mari Carmen Banuls (TU Munich, Germany)</h4>
                     <p>To be confirmed.</p>
                 </div>
             </div>
@@ -312,7 +312,7 @@
             </div>
             <div class="speaker">
                 <div>
-                    <h4>&#8226; Prof. Viv Kendon (Univ. Strathclyde, UK)</h4>
+                    <h4>&#8226; Prof. Animesh Datta (Univ. Warwick, UK)</h4>
                 </div>
             </div>
             <div class="speaker">
@@ -337,7 +337,7 @@
             </div>
             <div class="speaker">
                 <div>
-                    <h4>&#8226; Dr. Ivano Tavernelli (IBM Zurich, Switzerland; to be confirmed)</h4>
+                    <h4>&#8226; Dr. Alberto Baiardi (IBM Zurich, Switzerland)</h4>
                 </div>
             </div>
             <div class="speaker">
@@ -347,17 +347,17 @@
             </div>
             <div class="speaker">
                 <div>
-                    <h4>&#8226; Dr. Ryan Hanley (ColdQuanta, UK; to be confirmed)</h4>
+                    <h4>&#8226; Dr. Eric Jones (Infleqtion, US/UK)</h4>
                 </div>
             </div>
             <div class="speaker">
                 <div>
-                    <h4>&#8226; Dr. Annabelle Bohrdt (Univ. Regensburg, Germany; to be confirmed)</h4>
+                    <h4>&#8226; Dr. Gianluca Anselmetti (Boehringer Ingelheim, Germany)</h4>
                 </div>
             </div>
             <div class="speaker">
                 <div>
-                    <h4>&#8226; Dr. Stefano Mensa (Hartree Centre, UK; to be confirmed)</h4>
+                    <h4>&#8226; Dr. Werner Dobrautz (HZDR and TU Dresden)</h4>
                 </div>
             </div>
             <div class="speaker">
@@ -380,46 +380,78 @@
                 <h3>Event Schedule</h3>
                 <p>Plan your participation with our detailed schedule.</p>
             </div>
-            <div class="event">
-                <img src="day-icon-1.png" alt="Day 1">
-                <div>
-                    <h4>Day 1: Introduction to Quantum Digital Twins</h4>
-                    <p>09:00 AM - Opening Remarks</p>
-                    <p>10:00 AM - Keynote: The Future of Quantum Computing</p>
-                    <p>12:00 PM - Networking Lunch</p>
-                    <!-- Add more schedule items -->
-                </div>
-            </div>
-            <div class="event">
-                <img src="day-icon-2.png" alt="Day 2">
-                <div>
-                    <h4>Day 2: Building and Managing Digital Twins</h4>
-                    <p>09:00 AM - Workshop: Creating Your First Digital Twin</p>
-                    <p>11:00 AM - Panel Discussion: Challenges and Solutions</p>
-                    <p>01:00 PM - Lunch Break</p>
-                    <!-- Add more schedule items -->
-                </div>
-            </div>
-            <div class="event">
-                <img src="day-icon-3.png" alt="Day 3">
-                <div>
-                    <h4>Day 3: Advanced Applications and Future Trends</h4>
-                    <p>09:00 AM - Seminar: Integrating AI with Digital Twins</p>
-                    <p>11:00 AM - Case Studies: Success Stories</p>
-                    <p>01:00 PM - Lunch Break</p>
-                    <!-- Add more schedule items -->
-                </div>
-            </div>
-            <div class="event">
-                <img src="day-icon-4.png" alt="Day 4">
-                <div>
-                    <h4>Day 3: Advanced Applications and Future Trends</h4>
-                    <p>09:00 AM - Seminar: Integrating AI with Digital Twins</p>
-                    <p>11:00 AM - Case Studies: Success Stories</p>
-                    <p>05:00 PM - Closing Ceremony</p>
-                    <!-- Add more schedule items -->
-                </div>
-            </div>
+            <!-- Tuesday 4th Mar -->
+<div class="event">
+    <img src="day-icon-1.png" alt="Tuesday 4th Mar">
+    <div>
+        <h4>Tue 4th Mar</h4>
+        <p>09:15 – Intro</p>
+        <p>09:30 – Andrew Green</p>
+        <p>10:30 – Andrew Green</p>
+        <p>11:30 – Lachlan Lindoy</p>
+        <p>12:30 – Lunch</p>
+        <p>13:30 – Lachlan Lindoy</p>
+        <p>14:30 – Zlatko Papic</p>
+        <p>15:30 – Zlatko Papic</p>
+        <p>16:30 – End of day</p>
+    </div>
+</div>
+
+<!-- Wednesday 5th Mar -->
+<div class="event">
+    <img src="day-icon-2.png" alt="Wednesday 5th Mar">
+    <div>
+        <h4>Wed 5th Mar</h4>
+        <!-- No entry at 09:15 -->
+        <p>09:30 – Thomas Schaefer?</p>
+        <p>10:30 – Thomas Schaefer?</p>
+        <p>11:30 – Mari Carmen Bañuls</p>
+        <!-- 12:30 not scheduled -->
+        <p>13:30 – Mari Carmen Bañuls</p>
+        <p>14:30 – Natalia Chepiga</p>
+        <p>15:30 – Natalia Chepiga</p>
+        <p>17:00 – Poster session</p>
+    </div>
+</div>
+
+<!-- Thursday 6th Mar -->
+<div class="event">
+    <img src="day-icon-3.png" alt="Thursday 6th Mar">
+    <div>
+        <h4>Thu 6th Mar</h4>
+        <p>09:15 – Intro</p>
+        <p>09:30 – Frank Verstraete</p>
+        <p>10:10 – Yaroslav Herasymenko</p>
+        <p>10:50 – Coffee break</p>
+        <p>11:20 – Francois Jamet</p>
+        <p>12:00 – Gian Gentinetta</p>
+        <p>12:40 – Lunch</p>
+        <p>13:40 – Sougato Bose</p>
+        <p>14:20 – Animesh Datta</p>
+        <p>15:00 – Coffee break</p>
+        <p>15:30 – Pauline Besserve</p>
+        <p>16:10 – Viv Kendon replacement</p>
+        <p>16:50 – End of day</p>
+    </div>
+</div>
+
+<!-- Friday 7th Mar -->
+<div class="event">
+    <img src="day-icon-4.png" alt="Friday 7th Mar">
+    <div>
+        <h4>Fri 7th Mar</h4>
+        <p>09:30 – George Booth</p>
+        <p>10:10 – Nathan Fitzpatrick</p>
+        <!-- No event at 10:50 -->
+        <p>11:20 – IQM</p>
+        <p>12:00 – Infleqtion</p>
+        <p>13:40 – Alberto Baiardi</p>
+        <p>14:20 – Pasqal</p>
+        <!-- No event at 15:00 -->
+        <p>15:30 – Phasecraft</p>
+        <p>16:10 – Gianluca Anselmetti</p>
+    </div>
+</div>
         </div>
     </section>
 
