--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
             </div>
             <div class="speaker">
                 <div>
-                    <h4>&#8226; Dr. Stasja Stanisic (Phasecraft, UK; to be confirmed)</h4>
+                    <h4>&#8226; Dr. Gian Gentinetta (EPFL Lausanne, Switzerland)</h4>
                 </div>
             </div>
             <div class="speaker">
@@ -362,7 +362,7 @@
             </div>
             <div class="speaker">
                 <div>
-                    <h4>&#8226; Dr. Lucile Savary (Ecole Normale, Lyon, France; to be confirmed)</h4>
+                    <h4>&#8226; Dr. Pauline Besserve (Quantum Software Lab, Univ. Edinburgh, UK)</h4>
                 </div>
             </div>
             <div class="speaker">
@@ -389,11 +389,12 @@
         <p>09:30 – Andrew Green</p>
         <p>10:30 – Andrew Green</p>
         <p>11:30 – Lachlan Lindoy</p>
-        <p>12:30 – Lunch</p>
+        <p>12:30 – lunch</p>
         <p>13:30 – Lachlan Lindoy</p>
         <p>14:30 – Zlatko Papic</p>
         <p>15:30 – Zlatko Papic</p>
-        <p>16:30 – End of day</p>
+        <p>16:30 – Contributed talks</p>
+        <p>17:30 – End of day</p>
     </div>
 </div>
 
@@ -403,10 +404,10 @@
     <div>
         <h4>Wed 5th Mar</h4>
         <!-- No entry at 09:15 -->
-        <p>09:30 – Thomas Schaefer?</p>
-        <p>10:30 – Thomas Schaefer?</p>
+        <p>09:30 – Simone Montangero</p>
+        <p>10:30 – Simone Montangero</p>
         <p>11:30 – Mari Carmen Bañuls</p>
-        <!-- 12:30 not scheduled -->
+        <p>12:30 – lunch</p>
         <p>13:30 – Mari Carmen Bañuls</p>
         <p>14:30 – Natalia Chepiga</p>
         <p>15:30 – Natalia Chepiga</p>
@@ -430,8 +431,9 @@
         <p>14:20 – Animesh Datta</p>
         <p>15:00 – Coffee break</p>
         <p>15:30 – Pauline Besserve</p>
-        <p>16:10 – Viv Kendon replacement</p>
-        <p>16:50 – End of day</p>
+        <p>16:10 – TBD</p>
+        <p>16:50 – end of day</p>
+        <p>19:30 – conference dinner</p>
     </div>
 </div>
 
@@ -442,14 +444,15 @@
         <h4>Fri 7th Mar</h4>
         <p>09:30 – George Booth</p>
         <p>10:10 – Nathan Fitzpatrick</p>
-        <!-- No event at 10:50 -->
-        <p>11:20 – IQM</p>
-        <p>12:00 – Infleqtion</p>
+        <p>10:50 – Coffee break</p>
+        <p>11:20 – Fedor Simkovic</p>
+        <p>12:00 – Eric Jones</p>
         <p>13:40 – Alberto Baiardi</p>
-        <p>14:20 – Pasqal</p>
-        <!-- No event at 15:00 -->
-        <p>15:30 – Phasecraft</p>
+        <p>14:20 – Constantin Dalyac</p>
+        <p>15:00 – Coffee break</p>
+        <p>15:30 – Werner Dobrautz</p>
         <p>16:10 – Gianluca Anselmetti</p>
+        <p>16:40 – end of the masterclass</p>
     </div>
 </div>
         </div>
