--- a/index.html
+++ b/index.html
@@ -319,6 +319,8 @@
                 <ul> <h4>&#8226; Dr. Fran&#231;ois Jamet (Alice and Bob, France)</h4></ul>
                 <ul> <h4>&#8226; Prof. Animesh Datta (University of Warwick, UK)</h4></ul>
                 <ul> <h4>&#8226; Dr. Gian-Luca Anselmetti (Boehringer Ingelheim, Germany)</h4></ul>
+                <ul> <h4>&#8226; Dr. Nick Blunt (Riverlane, UK)</h4></ul>
+                <ul> <h4>&#8226; Dr. Eric Jones (Infleqtion, US)</h4></ul>
                 </div>
             </div>
             <p style="text-align: center; font-size: 14px;">We will update the website as more speakers confirm their participation.</p>
